css/style.css
/* ... */
.section__header .cloud__vector:nth-child(2){
    top: -16%;
    left: -38%;
    z-index: -1;
    /* animation: transformAnimFromRight 1s ease-out reverse .4s, opacityAnim 1s ease-out reverse .8s; */
    animation: transformAnimFromRight 1s ease-out reverse .3s, opacityAnim 1s ease-out reverse ;
}

.section__header .cloud__vector:nth-child(3){
    top: 0;
    left: 69%;
    /* animation: transformAnimFromRight 1s ease-out reverse .8s, opacityAnim 1s ease-out reverse .8s; */
    animation: transformAnimFromRight 1s ease-out reverse .3s, opacityAnim 1s ease-out reverse ;  
}

.section__header .cloud__vector:nth-child(4){
   top: 44%;
    left: -45%;
    /* animation: transformAnimFromRight 1s ease-out reverse .8s, opacityAnim 1s ease-out reverse .8s; */
    animation: transformAnimFromRight 1.1s ease-out reverse .3s, opacityAnim 1.1s ease-out reverse ;
}

.section__header .cloud__vector:nth-child(5){
    top:56%;
    left: 47%;
    /* animation: transformAnimFromRight 1s ease-out reverse .6s, opacityAnim 1s ease-out reverse .8s; */
    animation: transformAnimFromRight 1.1s ease-out reverse .3s, opacityAnim 1.1s ease-out reverse  ;
  
}

.reverseTransformAnimFromRight {
    animation: reverseTransformAnimFromRight 1s ease-out forwards, reverseOpacityAnim 1s ease-out forwards !important;
}
/* .section__about-me {
    display: flex;
    justify-content: center;
} */

.section__container {
    display: flex;
    position: relative;
    align-items: center;
    flex-wrap: wrap;
    /* justify-content: space-between; */
    justify-content: flex-end;
    width: 100%;
    height: 100%;
    margin-right: 8%; 
    /* padding-left: 8%; */
    z-index: 8;
    transition: 1s;
}

.section__container--section-expand {
    margin-right: 0;
    /* margin: 0; */
    /* padding-left: 8%; */
}

.title-box {
    display: flex;
    position: absolute;
    flex-direction: column;
    color: white;
    overflow: hidden;
    z-index: 3;
    left: 0;
    margin-left: 8%;
    /* margin: 0 auto; */
}

.title-h1 {
    letter-spacing: .13rem;
    margin-bottom: -1.5rem;
    /* font-size: 5rem; */
    font-size: 6vw;
    font-weight: 500;
    text-align: end;
    text-shadow: 0 0 10px #00000082;
    transform: translateX(-100%);
    animation-delay: .5s;
    text-shadow: 0 0 10px rgb(18, 12, 40);
}
/* #about-me .title-h1, #projects .title-h1 {
    font-size: 7vw;
    letter-spacing: .3rem;
} */

.transformAnimSections {
    animation: transformAnimFromLeft 1s ease-out forwards ;
}

.red-line-box {
    position: relative;
    display: flex;
    flex-wrap: nowrap;
    transform: translateX(100%);
    animation-delay: .7s;
    margin-top: .7rem;
}
#about-me .red-line-box {
    
    margin-top: 0;
}

.title-red-line {
    transform: translateY(1300%);
    bottom: 50%;
    left: 0;
    flex-grow: 1;
    height: 0.06rem;
    background-color: var(--mainTextColor);
}

.title-red-line-text {
    padding-right: 0.08rem;
    font-size: 1.3rem;
    font-weight: 300;
    color: var(--mainTextColor);
}

.title__red-linesV2-box {
    position: relative;
    display: flex;
    margin: 1.7rem 0;
    height: 1.2rem;
    width: 8rem;
    overflow: hidden;
    animation-delay: .7s;
    
}

.title__red-lineV2 {
    position: absolute;
    width: 4rem;
    height: .16rem;
    border-radius: 2px;
    background-color: var(--mainTextColor);
    transform: translateX(300%);
}

.title__red-lineV2:nth-child(1) {
    top: 0;
    left: 0;
    animation-delay: .4s;
}

.title__red-lineV2:nth-child(2) {
    bottom: 0;
    left: 1.9rem;  
    animation-delay: .5s;
}

.title__contact-box {
margin-left: .3rem;
letter-spacing: .1rem;
}

.title__mail {
    display: block;
    width: 100%;
    text-decoration: none;
    color: inherit;
    margin-bottom: .8rem;
    transform: translateX(-100%);
    animation-delay: .2s;
}

.title__phone {
    display: block;
    width: 100%;
    margin-bottom: .8rem;
    transform: translateX(-100%);
    animation-delay: .3s;
}

.title__mail-icon {
    margin-right: 1.1rem;
    margin-left: .1rem;
    transform: translateX(-200%);
    animation-delay: .9s;
}

.title__phone-icon {
    transform: translateX(-500%);
    animation-delay: .9s;
}



.title__button-container {
    transform: translateX(-120%);
    animation-delay: .7s;
    overflow: hidden;
}

.title__button {
    margin-top: 5px;
    margin-left: 5%;
    padding: 8px 12px;
    color: white;
    background-color: var(--mainTextColor);
    border: none;
    border-radius: 20px;
    font-size: 0.8rem;
    font-family: 'Poppins';
    cursor: pointer;
    transition: transform .3s ease-out;
}

.title__button:hover {
    transform: translateY(-6%);
}

.title__button--hide {
    transform: translateY(100%) !important;
}

.image-box {
    position: relative;
    width: 63%;
    height: 75%;
    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.207);
    overflow: hidden;
    /* transition: .4s; */
    transition: .6s .4s;
    z-index: 2;
    top: 0;
    left: 0;
    transform: scale(.8);
}
.image-box:hover {
   transform: translateY(-.3%);
}

.image-box:hover ~ .section__number-box{
   transform: scale(1.02);
}

.image-box--section-expand {
    height: 100%;
}

.about-me__image {
    width: 100%;
    height: 100%;
    background-image: url('../image/moon-min-big2.jpg');
    background-position: center;
    background-size: cover;
    
}

.image__cover-blue {
    position: absolute;
    top: 0;
    left: 100%;
    width: 100%;
    height: 100%;
    background-color: #072142;
    transform: translateX(-100%);
    animation-delay: .4s;  
    /* animation: name duration timing-function delay iteration-count direction fill-mode; */
    animation-duration: 1s;
    animation-timing-function: ease-in-out;
    overflow: hidden;
    }
/* ... */

